--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "go",
+  "name": "travel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host 0.0.0.0",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
